@@ -7,6 +7,7 @@ poison_ball
 thorn_armor
 throw_flames
 passive_divine
+passive_hunting
 blazing_inferno
 lightning_totem
 thunder_storm
