@@ -44,11 +44,11 @@ E,,,,,,,,,,,,,,,,,,O,,,,O,,O,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,O,,O,,O,critical_hit,,critical_damage,O,,O,,O,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,dodge,,dodge,O,,,,,,O,health,,health,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,O,,,,,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,recoil_shot,,,,,,,,,,arrow_storm,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,O,,O,,,,,,,,O,,O,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,health_regen,,health_regen,,,,,,,,mana_regen,,mana_regen,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,o,,,,,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,health_regen,,,,,,,,,,mana_regen,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,recoil_shot,,,,critical_hit,,critical_hit,,,,arrow_storm,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,O,,O,,,O,,O,,,O,,O,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,health_regen,,health_regen,O,O,O,passive_hunting,O,O,O,mana_regen,,mana_regen,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,o,,,,O,,O,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,health_regen,,,,critical_damage,,critical_damage,,,,mana_regen,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
