@@ -1,7 +1,8 @@
 v.1.3.5
 
-- added passive skills! You can only choose 1 of these, and each school of magic has one. 
+- Added passive skills! You can only choose 1 of these, and each school of magic has one. 
 They are strong, automatic life savers that activate when you are damaged and at low health.
+Currently they have a 10 minute cooldown but that's up to change.
 
 - added a "one_of_a_kind" field to perks. 
 If name isn't explanatory by itself, it means if 2 perks have "one_of_a_kind": "apple",
